# Vector

./: .gitignore  CLAUDE.md  CONCORD_V2_IMPL_PLAN.md  LICENSE  README.md  SECURITY.md  TODO-v0.4.0.md  nip-bot-commands.md  package-lock.json  package.json  zapstore.yaml
.ahqstore/: config.json  generate-manifest.mjs
.claude/: testing.md
.github/: FUNDING.yml
crates/: Cargo.toml  clippy.toml
crates/concord-cli/: Cargo.toml
crates/concord-cli/src/: main.rs
crates/vector-agent/: Cargo.toml
crates/vector-agent/src/: handler.rs  main.rs  tools.rs
crates/vector-cli/: Cargo.toml
crates/vector-cli/src/: main.rs
crates/vector-core/: Cargo.toml  README.md
crates/vector-core/examples/: concord_control_dump.rs  invite_probe.rs
crates/vector-core/src/: badges.rs  blossom.rs  blossom_capabilities.rs  blossom_servers.rs  bot_interface.rs  chat.rs  compact.rs  deletion.rs  emoji_packs.rs  emoji_usage.rs  error.rs  event_handler.rs  hex.rs  inbox_relays.rs  lib.rs  logging.rs  macros.rs  negentropy.rs  net.rs  nip55.rs  profile.rs  rumor.rs  self_destruct.rs  sending.rs  signer.rs  state.rs  stats.rs  stored_event.rs  traits.rs  types.rs  wallpaper.rs  webxdc.rs
crates/vector-core/src/community/: attachments.rs  cache.rs  cipher.rs  edition.rs  envelope.rs  inbound.rs  invite.rs  invite_list.rs  list.rs  mod.rs  owner.rs  public_invite.rs  realtime.rs  roles.rs  roster.rs  send.rs  service.rs  transport.rs  version.rs
crates/vector-core/src/community/v2/: chat.rs  community.rs  control.rs  derive.rs  dissolution.rs  guestbook.rs  inbound.rs  invite.rs  list.rs  mod.rs  realtime.rs  rekey.rs  roles.rs  service.rs  stream.rs  streamauth.rs
crates/vector-core/src/concord/: mod.rs
crates/vector-core/src/concord/v1/: cache.rs  db.rs  derive.rs  edition.rs  invite.rs  metadata.rs  mod.rs  rekey.rs  send.rs
crates/vector-core/src/concord/v2/: community.rs  community_list.rs  control.rs  db.rs  derive.rs  edition.rs  guestbook.rs  invite.rs  mod.rs  rekey.rs  roster.rs  service.rs  stream.rs
crates/vector-core/src/crypto/: guarded_key.rs  mod.rs  signer.rs
crates/vector-core/src/db/: attachments.rs  bots.rs  chats.rs  community.rs  events.rs  id_cache.rs  mls.rs  mls_wrap_keys.rs  mod.rs  nip17_keys.rs  profiles.rs  schema.rs  settings.rs  wrappers.rs
crates/vector-core/src/mls/: cooperative_hide.rs  group_handler.rs  invites.rs  keypackage.rs  messaging.rs  mod.rs  rumor_mls.rs  service.rs  tracking.rs  types.rs
crates/vector-core/src/profile/: mod.rs  sync.rs
crates/vector-core/src/simd/: hex.rs  image.rs  mod.rs
crates/vector-core/src/tor/: mod.rs  socks.rs
crates/vector-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/vector-sdk/examples/: ai_bot.rs  concordia.rs  echo_bot.rs  file_bot.rs  moderation_bot.rs  save_files_bot.rs  slash_command_bot.rs  v2_community_bot.rs  v2_send_once.rs  v2_test_bot.rs  v2_typing_probe.rs  whitelist_bot.rs
crates/vector-sdk/src/: commands.rs  lib.rs
docs/: apple-silicon-android-compiling.md  attributions.md  typing-indicator.md  ubuntu-arm-compiling.md  webxdc-realtime.md
scripts/: android-build.sh  android-dev.sh  build-emoji.mjs  build-frontend.mjs  (+2 more)
src-tauri/: .taurignore  Cargo.toml  Info.plist  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  miniapp.json
src-tauri/icons/: icon.icns
src-tauri/patches/pkarr/: Cargo.toml
src-tauri/permissions/autogenerated/: accept_community_invite.toml  accept_invite_code.toml  accept_mls_welcome.toml  accept_public_invite.toml  add_custom_blossom_server.toml  add_custom_relay.toml  add_mls_member_device.toml  admin_hide_message.toml  audio_load.toml  audio_pause.toml  audio_play.toml  audio_probe.toml  audio_seek.toml  audio_set_volume.toml  audio_stop.toml  audio_stop_all.toml  ban_community_member.toml  block_user.toml  blossom_can_likely_upload.toml  bump_emoji_usage.toml  bump_emoji_usage_batch.toml  cache_android_file.toml  cache_community_image.toml  cache_file_bytes.toml  cache_group_avatar.toml  cache_invite_avatar.toml  cache_invite_logo.toml  cache_url_image.toml  can_manage_community_roles.toml  cancel_bunker_session.toml  cancel_nip55_session.toml  cancel_upload.toml  cancel_wallpaper_preview.toml  cancel_whisper_download.toml  check_any_account_exists.toml  check_battery_optimized.toml  check_fawkes_badge.toml  cleanup_zip.toml  clear_active_account.toml  clear_all_android_file_cache.toml  (+303 more)
src-tauri/src/: account_manager.rs  audio.rs  audio_engine.rs  blossom.rs  chat.rs  crypto.rs  db.rs  db_migration.rs  db_sql_migration.rs  deep_link.rs  guarded_key.rs  image_cache.rs  inbox_relays.rs  lib.rs  macros.rs  main.rs  message.rs  mls.rs  net.rs  pivx.rs  profile.rs  profile_sync.rs  rumor.rs  share.rs  stored_event.rs  upload.rs  util.rs  voice.rs  whisper.rs
src-tauri/src/android/: background_sync.rs  clipboard.rs  external_signer.rs  filesystem.rs  media_server.rs  miniapp.rs  miniapp_jni.rs  mod.rs  permissions.rs  storage.rs  updates.rs  utils.rs
src-tauri/src/commands/: account.rs  attachments.rs  audio.rs  clipboard.rs  community.rs  emoji_packs.rs  encryption.rs  invites.rs  media.rs  messaging.rs  mls.rs  mod.rs  realtime.rs  relays.rs  self_destruct.rs  sync.rs  system.rs  tor.rs  updates.rs  wallpaper.rs
src-tauri/src/db/: attachments.rs  chats.rs  events.rs  maintenance.rs  messages.rs  miniapps.rs  mls.rs  mod.rs  profiles.rs  settings.rs
src-tauri/src/message/: compact.rs  compression.rs  files.rs  mod.rs  sending.rs  types.rs
src-tauri/src/miniapps/: commands.rs  error.rs  marketplace.rs  mod.rs  network_isolation.rs  permissions.rs  realtime.rs  rt_ws.rs  scheme.rs  state.rs
src-tauri/src/mls/: messaging.rs  mod.rs  tracking.rs  types.rs
src-tauri/src/services/: event_handler.rs  mod.rs  notification_service.rs  subscription_handler.rs
src-tauri/src/shared/: error.rs  image.rs  ipc.rs  mod.rs  state_access.rs
src-tauri/src/simd/: audio.rs  hex.rs  html_meta.rs  image.rs  mod.rs  url.rs
src-tauri/src/state/: chat_state.rs  globals.rs  mod.rs  stats.rs  sync.rs
(+71 files in other folders)
