[package]
name = "vector"
version = "0.1.7"
description = "A humble attempt at a modern, private, complete Nostr chat client."
authors = ["Formless Labs", "JSKitty", "YuurinBee"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
nostr-sdk = { version = "0.42.0", features = ["nip04", "nip06", "nip44", "nip59", "nip96"] }
bip39 = { version = "2.1.0", features = ["rand"] }
tokio = { version = "1.45.1", features = ["sync"] }
futures-util = "0.3.31"
tauri = { version = "2.5.1", features = ["protocol-asset", "image-png"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.20", features = ["rustls-tls", "stream", "blocking"] }
scraper = "0.23.1"
aes = "0.8.4"
aes-gcm = "0.10.3"
hex = "0.4.3"
generic-array = "0.14.7"
sha2 = "0.10.9"
once_cell = "1.21.3"
lazy_static = "1.5.0"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
tauri-plugin-opener = "2.2.7"
tauri-plugin-notification = "2.2.2"
tauri-plugin-store = "2.2.0"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-fs = "2.3.0"
tauri-plugin-clipboard-manager = "2.2.2"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
blurhash = "0.2.3"
base64 = "0.22.1"
cpal = "0.16.0"
hound = "3.5.1"
rubato = "0.16.2"
symphonia = { version = "0.5.4", features = ["mp3", "wav", "flac", "pcm"] }

# Android-only dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk-context = "0.1.1"
openssl = { version = "0.10", features = ["vendored"] }

# Whisper (with cross-platform acceleration features - excluded on Android)
[target.'cfg(all(not(target_os = "android"), target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.13.2", features = ["metal"] }

[target.'cfg(all(not(target_os = "android"), windows))'.dependencies]
whisper-rs = { version = "0.13.2", features = ["vulkan"] }

[target.'cfg(all(not(target_os = "android"), target_os = "linux"))'.dependencies]
whisper-rs = { version = "0.13.2", features = ["vulkan"] }

# For other platforms (not Android, macOS, Windows, or Linux)
[target.'cfg(all(not(target_os = "android"), not(target_os = "macos"), not(windows), not(target_os = "linux")))'.dependencies]
whisper-rs = "0.13.2"
