[package]
name = "vector"
version = "0.3.3"
description = "A humble attempt at a modern, private, complete Nostr chat client."
authors = ["Formless Labs", "JSKitty", "YuurinBee"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["whisper"]
whisper = ["dep:whisper-rs"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
nostr-sdk = { version = "0.44.1", features = ["nip06", "nip44", "nip59"] }
nostr-blossom = "0.44.0"
mdk-core = { git = "https://github.com/marmot-protocol/mdk.git", rev = "136a9ee929580206ea0357d48d9766427918186d", features = ["mip04"] }
mdk-sqlite-storage = { git = "https://github.com/marmot-protocol/mdk.git", rev = "136a9ee929580206ea0357d48d9766427918186d" }
mdk-storage-traits = { git = "https://github.com/marmot-protocol/mdk.git", rev = "136a9ee929580206ea0357d48d9766427918186d" }
bip39 = { version = "2.2.2", features = ["rand"] }
tokio = { version = "1.49.0", features = ["sync", "time", "net", "io-util"] }
futures-util = "0.3.31"
tauri = { version = "2.10.2", features = ["macos-private-api", "protocol-asset", "image-png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
aes = "0.8.4"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
tauri-plugin-opener = "2.5.3"
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-deep-link = "2.4.7"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif", "webp", "tiff", "ico"] }
fast-thumbhash = "0.2"
base64-simd = "0.8"
cpal = "0.16.0"
hound = "3.5.1"
symphonia = { version = "0.5.5", features = ["mp3", "wav", "flac", "pcm", "aac", "isomp4", "ogg", "vorbis"] }
rustfft = "6.2"
lofty = "0.23"
rusqlite = { version = "0.32", features = ["bundled"] }
# Pin OpenMLS crypto deps to versions MDK was tested with (newer versions pull broken sha3/digest pre-release chain)
openmls_rust_crypto = "=0.5.0"
hpke-rs-rust-crypto = "=0.4.0"
rayon = "1.11.0"

# Transitive Dependencies (re-used from frameworks we already utilise, like Tauri)
memchr = "2"
zeroize = "1.8"
libc = "0.2"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

# Mini Apps (WebXDC) support
zip = { version = "2.4", default-features = false, features = ["deflate-zlib"] }
toml = "0.8.23"
anyhow = "1.0.99"
http = "1.3"
url = "2.5.7"

# Realtime peer channels (Iroh P2P)
iroh = "0.97"
iroh-gossip = "0.97"
noq-proto = "0.16"
rand = "0.8"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["handshake"] }

# PIVX Promos (addressless crypto payments)
secp256k1 = "0.29"
ripemd = "0.1.3"
bs58 = "0.5.1"

# Android-only dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk-context = "0.1.1"
openssl = { version = "0.10.75", features = ["vendored"] }
whisper-rs = { version = "0.15.1", optional = true }

# Whisper (with platform-specific GPU acceleration)
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15.1", features = ["metal"], optional = true }

[target.'cfg(windows)'.dependencies]
whisper-rs = { version = "0.15.1", features = ["vulkan"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.15.1", features = ["vulkan"], optional = true }

# For other platforms (not Android, macOS, Windows, or Linux)
[target.'cfg(all(not(target_os = "android"), not(target_os = "macos"), not(windows), not(target_os = "linux")))'.dependencies]
whisper-rs = { version = "0.15.1", optional = true }

# Desktop-only dependencies (deep link single-instance support)
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.0"
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
tauri-plugin-window-state = "2.4.1"


# MCP bridge for AI-assisted debugging (only included in debug builds via cfg)
tauri-plugin-mcp-bridge = "0.8"

[dev-dependencies]
tempfile = "3"

# Cross-compilation fix: whisper-rs-sys build.rs uses cfg!(target_os = "macos") which
# checks the HOST OS, not the cross-compilation target. Our fork fixes this so Android
# builds from macOS don't try to link Apple's Accelerate/BLAS framework.
[patch.crates-io]
whisper-rs-sys = { git = "https://github.com/VectorPrivacy/whisper-rs.git", branch = "master" }
# pkarr uses reqwest with "rustls" feature which forces aws-lc-rs (breaks Android 11).
# Patched to use "rustls-no-provider" so our ring install_default() is used instead.
pkarr = { path = "patches/pkarr" }
# nostr SDK's SecretKey Drop uses non_secure_erase which the compiler can optimize away.
# Patched to use zeroize (volatile writes) so secret key bytes are guaranteed cleared from the stack.
# Fork: https://github.com/VectorPrivacy/nostr/tree/zeroize-secretkey
nostr = { git = "https://github.com/VectorPrivacy/nostr.git", branch = "zeroize-secretkey" }
