[package]
name = "vector-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Vector — the single source of truth for all Vector clients, SDKs, and interfaces."

[dependencies]
# Nostr Protocol
nostr = { git = "https://github.com/VectorPrivacy/nostr.git", branch = "zeroize-secretkey" }
nostr-sdk = { version = "0.44.1", features = ["nip06", "nip44", "nip59"] }
nostr-blossom = "0.44.0"
# NIP-46 (Nostr Connect / Remote Signing). Same fork as `nostr` so the
# transitive nostr type identity lines up — pulling from crates.io would pin
# upstream nostr through the patch table, but using the fork explicitly keeps
# the resolver from juggling two branches of the same workspace.
nostr-connect = { git = "https://github.com/VectorPrivacy/nostr.git", branch = "zeroize-secretkey" }
bip39 = { version = "2.2.2", features = ["rand"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# MLS (Marmot/MDK) — exact same rev as src-tauri
mdk-core = { git = "https://github.com/marmot-protocol/mdk.git", rev = "136a9ee929580206ea0357d48d9766427918186d", features = ["mip04"] }
mdk-sqlite-storage = { git = "https://github.com/marmot-protocol/mdk.git", rev = "136a9ee929580206ea0357d48d9766427918186d" }
mdk-storage-traits = { git = "https://github.com/marmot-protocol/mdk.git", rev = "136a9ee929580206ea0357d48d9766427918186d" }

# OpenMLS crypto pins — must match MDK's transitive deps (avoids curve25519-dalek conflict with iroh in src-tauri)
openmls_rust_crypto = "=0.5.0"
hpke-rs-rust-crypto = "=0.4.0"
# Needed to access engine.provider.storage() via OpenMlsProvider trait method
openmls_traits = { version = "0.5", default-features = false }

# Async
tokio = { version = "1.49.0", features = ["sync", "time", "net", "io-util", "rt-multi-thread", "macros"] }
futures-util = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
aes = "0.8.4"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
argon2 = "0.5.3"
sha2 = "0.10.9"
zeroize = "1.8"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "charset", "socks"] }
url = "2.5.7"

# Image metadata
fast-thumbhash = "0.2"

# Utils
rand = "0.8"
base64-simd = "0.8"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

# Tor (Arti) — VectorPrivacy fork with a single one-line patch on tor-dirmgr's
# Cargo.toml relaxing its rusqlite constraint from `>=0.36` to `>=0.32` so we
# can share libsqlite3-sys with Vector's MDK-pinned rusqlite 0.32. The actual
# rusqlite API surface tor-dirmgr uses hasn't changed, so no source edits are
# needed. When MDK 0.7.1 lands and Vector can move to rusqlite 0.37, drop this
# fork and use stock arti-client.
#
# Direct path-equivalent git deps (not [patch.crates-io]) so the entire arti
# workspace resolves through one consistent source — patching only tor-dirmgr
# while siblings come from crates.io creates a tor_protover type-identity
# split that breaks the build with 150+ trait-mismatch errors.
arti-client = { git = "https://github.com/VectorPrivacy/arti.git", branch = "vector/rusqlite-0.32", default-features = false, features = ["tokio", "rustls", "experimental-api", "bridge-client", "pt-client"], optional = true }
tor-rtcompat = { git = "https://github.com/VectorPrivacy/arti.git", branch = "vector/rusqlite-0.32", default-features = false, features = ["tokio", "rustls"], optional = true }
# For circuit introspection (the "Advanced" panel showing live hops). Direct git
# deps from the same fork so type identities line up with arti-client's transitive
# tree — see the note above on type-identity splits.
tor-circmgr = { git = "https://github.com/VectorPrivacy/arti.git", branch = "vector/rusqlite-0.32", default-features = false, optional = true }
tor-dirmgr = { git = "https://github.com/VectorPrivacy/arti.git", branch = "vector/rusqlite-0.32", default-features = false, optional = true }
tor-linkspec = { git = "https://github.com/VectorPrivacy/arti.git", branch = "vector/rusqlite-0.32", default-features = false, optional = true }
tor-guardmgr = { git = "https://github.com/VectorPrivacy/arti.git", branch = "vector/rusqlite-0.32", default-features = false, features = ["bridge-client", "pt-client"], optional = true }
# tokio_util::compat bridges arti's futures::io::AsyncRead to tokio::io::AsyncRead so
# we can splice Arti's DataStream into a tokio TcpStream for the SOCKS5 bridge.
tokio-util = { version = "0.7", features = ["compat"], optional = true }

# Platform
libc = "0.2"

[features]
default = []
# Enables embedded Tor (Arti) — bootstraps Arti, runs a localhost SOCKS5 listener
# bridging into the Tor network. Consumers (HTTP / Nostr) opt into the proxy via
# `tor::proxy_url()` returning `Some(socks5://127.0.0.1:<port>)` when active.
tor = ["dep:arti-client", "dep:tor-rtcompat", "dep:tokio-util", "dep:tor-circmgr", "dep:tor-dirmgr", "dep:tor-linkspec", "dep:tor-guardmgr"]

[dev-dependencies]
tempfile = "3"
