[package]
name = "vector-sdk"
version = "0.3.0"
edition = "2021"
description = "Ergonomic Rust SDK for building Vector bots and clients on top of vector-core."
license = "MIT"
keywords = ["nostr", "sdk", "bot", "vector", "messaging"]
categories = ["network-programming", "asynchronous", "api-bindings"]
rust-version = "1.75"

[dependencies]
# The single source of truth — all protocol logic lives here. Tor stays opt-in
# (vector-core's `tor` feature is off by default) so the SDK's dep tree is light.
vector-core = { path = "../vector-core", default-features = false }
nostr-sdk = "0.44.1"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
# Pass-through: build vector-core with embedded Tor (Arti). Off by default.
tor = ["vector-core/tor"]

[[example]]
name = "echo_bot"

[[example]]
name = "file_bot"
